<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        style="@style/CustomToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="4dp"
        android:background="@color/splash_bg"
        android:minHeight="?attr/actionBarSize"
        android:textColor="@color/app_name_color"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@color/black"
        app:title="@string/app_name" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/splash_statusbar_light"
        android:backgroundTintMode="add"
        android:clickable="true"
        android:contentDescription="@string/floating_button_add_new_task"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:tooltipText="Add a new note"
        app:collapsedSize="56dp"
        app:icon="@drawable/noteadd"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/searchbar_background"
        android:clickable="true"
        android:closeIcon="@null"

        android:goIcon="@drawable/go_icon"


        android:inputType="text"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:pointerIcon="text"
        android:queryBackground="@drawable/search_query_background"
        android:searchHintIcon="@drawable/search_logo"
        android:searchIcon="@drawable/search_logo"
        app:iconifiedByDefault="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        app:layout_constraintVertical_bias="0.0"
        app:queryBackground="@drawable/search_query_background"
        app:queryHint="search notes.."
        app:searchHintIcon="@drawable/search_logo" />


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:elevation="18dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089">

    </FrameLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/not_found_lottie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="50dp"
        android:maxHeight="40dp"

        android:tint="@color/icon_color"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"

        app:lottie_rawRes="@raw/not_found" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerNoteList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:paddingBottom="136dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>